test: TestHelper E2E 테스트 작성